# medical_directory

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: db.sqlite3
src/config/: settings.py  urls.py
src/reference_books/: admin.py  apps.py  models.py  schema_utils.py  serializers.py  services.py  urls.py  views.py
src/reference_books/migrations/: 0001_initial.py
src/reference_books/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
