[tool.poetry]
name = "medical_reference_books"
version = "0.1.0"
description = ""
authors = ["Kurbangaleev Ilnur <haker_ilnur_97@mail.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.7"
djangorestframework = "3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
